<resources>
    <string name="app_name">MoveNow</string>
    <string name="title_home">Home</string>
    <string name="title_paths">Paths</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_user">User</string>
    <string name="newVisit">New Visit</string>
    <string name="Title">Title</string>
    <string name="insertTitle">insert a title</string>
    <string name="titleDetail">Show current date and time automatically calculated</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Paths">Paths</string>
    <string name="Date">Date</string>
    <string name="pathTitle">pathTitle</string>
    <string name="pathToImagePath">pathToImagePath</string>
    <string name="title">Title</string>
    <string name="User">User</string>
    <string name="Gallery">Gallery</string>
</resources>
